--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "swipe_to_close",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "http://evstarostin.github.io/swipe_to_close",
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -11,7 +12,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
