--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "swipe_to_close",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "https://evstarostin.github.io/swipe_to_close",
+  "homepage": "https://evstarostin.github.io/swipe_to_close",
   "dependencies": {
+    "body-scroll-lock": "^2.6.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
